--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "core-js": "3.26.1",
     "jquery": "3.6.2",
     "popper.js": "1.16.1",
+    "sass-loader": "^13.2.0",
     "vue": "3.2.45",
     "vue-router": "4.1.6",
     "vue3-star-ratings": "1.1.0"
